trunk/Archive2/ca/fefc2ebc86dad6/output
main.cpp: In function 'float average(float*, int)':
main.cpp:23:34: error: 'printf' was not declared in this scope
               average_func_called);
                                  ^
